Updates all dependencies that don't require instrumentation changes (#1452)
This updates the build and all dependencies possible. Notably, we
couldn't update httpclient5 as there's a break in 5.4.

This also re-organizes property names so that mechanical updating is
easier.

---------

Signed-off-by: Adrian Cole <adrian.cole@elastic.co>
Co-authored-by: Adrian Cole <adrian.cole@elastic.co>